--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Start Header -->
     <div class="header">
         <div class="container">
-            <img class="logo" src="images/logo.png" alt="">
+            <img class="logo" src="E:\My-Github/Portfolio/images/logo.png" alt="">
             <div class="links">
                 <span class="icon">
                     <span></span>
@@ -121,7 +121,7 @@
 </div>
 <div class="col">
     <div class="image image-column">
-        <img src="../Template_1/images/women1.jpg" alt="">
+        <img src="E:\My-Github/Portfolio/images/women1.jpg" alt="">
     </div>
 </div>  
         </div>
@@ -137,21 +137,21 @@
          <p>If you do it right, it will last forever. </p>   
         <div class="Portfolio-content"> 
             <div class="card">
- <img src="../Template_1/images/portfolio-1.png" alt="">
+ <img src="E:\My-Github/Portfolio/images/portfolio-1.png" alt="">
 <div class="info">
     <h3>English Conversational Skills for Beginners (1)</h3>
 <p>The course (part of 3 courses series) covered the basics of English conversation skills, <br> from self-introduction, <br> basic question types about time, food, tasks, to making plans for the future by <br> (3) interactive training hours.</p>
 </div>
 </div>
 <div class="card">
-            <img src="../Template_1/images/portfolio-2.png" alt="">
+            <img src="E:\My-Github/Portfolio/images/portfolio-2.png" alt="">
             <div class="info">
                 <h3>English Conversational Skills for Beginners (2)</h3>
             <p>The course (part of 3 courses series) covered some English conversation skills, <br> the learner learnt know how to ask about places and describe them, <br> talking about the past, and managing conversations by <br> (3) interactive training hours.</p>
             </div>
                         </div>
                         <div class="card">
-                        <img src="../Template_1/images/portfolio-3.png" alt="">
+                        <img src="E:\My-Github/Portfolio/images/portfolio-3.png" alt="">
                         <div class="info">
                             <h3> Technological principles and professional communication </h3>
 <P>We will learn about basic technology basics and skills, professional communication tools and how to use and benefit from social media platforms to activate professional learning communities. We will also learn the basics of safety and digital citizenship. By (4) hours of training and interactive.</P>
@@ -169,7 +169,7 @@
          <p>Less is more work </p>   
         <div class="about-content">
             <div class="image">
-            <img src="../Template_1/images/about.png" alt="">
+            <img src="E:\My-Github/Portfolio/images/about.png" alt="">
             </div>
             <div class="text">
                 <p>An ambitious person with high organizational abilities, I am seriously looking for an entrepreneurial job to gain hands-on experience in the IT field, specializing in software development and web development.
